# ipcbus

./: CMakeLists.txt
ipcbus/include/: bus.h  ipc.h  mock.h
ipcbus/include/detail/: bus_device.h  bus_impl.h
ipcbus/src/: CMakeLists.txt  bus.cpp  bus_device.cpp  bus_impl.cpp  ipc.cpp  mock.cpp
test/: CMakeLists.txt  construct_test.cpp  test.cpp
